<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/input_background"
        android:padding="10sp"
        android:textSize="36sp"
        android:text="@string/calc_text"
        android:textColor="@color/input_text"
        android:gravity="end|bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:textSize="24sp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dvdSymbol"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/background_light">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:textSize="24sp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply_symbol"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/background_light">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:textSize="24sp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract_symbol"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/background_light">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="workButton"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:textSize="24sp"
            android:onClick="onDecimal"
            android:background="@color/button_light"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/del"
            android:textSize="18sp"
            android:onClick="deleteDigit"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_symbol"
            android:textSize="24sp"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/background_light">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/clr"
            android:textSize="18sp"
            android:onClick="clearSc"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/equals_symbol"
            android:textSize="28sp"
            android:layout_margin="2dp"
            android:onClick="onEquals"
            android:background="@color/button_dark"
            android:textColor="@color/button_text_light"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml,VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>
